@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: sapi_apache2.c,v 1.1.2.30 2004/03/16 22:38:17 iliaa Exp $ */
+/* $Id: sapi_apache2.c,v 1.1.2.31 2004/06/18 00:37:02 iliaa Exp $ */
 
 #include <fcntl.h>
 
@@ -179,6 +179,7 @@ php_apache_sapi_get_stat(TSRMLS_D)
 
 	ctx->finfo.st_uid = ctx->r->finfo.user;
 	ctx->finfo.st_gid = ctx->r->finfo.group;
+	ctx->finfo.st_dev = ctx->r->finfo.device;
 	ctx->finfo.st_ino = ctx->r->finfo.inode;
 #if defined(NETWARE) && defined(CLIB_STAT_PATCH)
 	ctx->finfo.st_atime.tv_sec = ctx->r->finfo.atime/1000000;
